# vcp-servers

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SPEC_PIN.json
.devcontainer/: devcontainer.json
ci/: README.md  conformance.yml
conformance/: README.md  generate.py
conformance/vectors/: argument-binding.json  canonical-hash.json  capability-identity.json  command.json  delegation.json  environment-attestation.json  grant-rules.json  reason-codes.json  taint.json  task-rules.json
examples/: README.md
go/: README.md  go.mod
go/examples/hello/: main.go
go/gateway/: additions_test.go  attestation.go  audit.go  command.go  command_security_test.go  command_vectors_test.go  delegation.go  envattest.go  envattest_test.go  fanout_scenario.go  fanout_scenario_test.go  gateway_test.go  grant.go  iface.go  iface_test.go  invoke.go  policy.go  provider.go  reasoncodes.go  scenario.go  taint.go  task.go  util.go  vectors_test.go  verify.go
go/sdk/: attestation.go  attestation_test.go  bridge.go  command.go  command_test.go  hash.go  identity.go  jcs.go  manifest.go  signing.go  signing_test.go  vectors_test.go
python/: README.md  pyproject.toml
python/examples/: hello.py
python/tests/: _vectors.py  test_command_suite.py  test_conformance.py  test_environment_attestation.py  test_gateway_e2e.py  test_sdk.py  test_security_suite.py  test_server.py
python/vcp_gateway/: __init__.py  attestation.py  audit.py  command.py  delegation.py  gateway.py  grants.py  interface.py  policy.py  taint.py  tasks.py  verify.py
python/vcp_sdk/: __init__.py  attestation.py  bridge.py  canonical.py  command.py  identity.py  manifest.py  plan.py  reason_codes.py  signing.py
python/vcp_server/: __init__.py  capabilities.py  client.py  demo.py  demo_obo.py  http_server.py  provider.py
rust/: Cargo.toml  README.md
rust/crates/vcp-gateway/: Cargo.toml
rust/crates/vcp-gateway/examples/: hello.rs
rust/crates/vcp-gateway/src/: attestation.rs  audit.rs  command.rs  delegation.rs  env_attestation.rs  grant.rs  interface.rs  invoke.rs  lib.rs  policy.rs  reason.rs  taint.rs  task.rs  verify.rs
rust/crates/vcp-gateway/tests/: conformance.rs  conformance_2026_06_13.rs  conformance_command.rs  conformance_environment_attestation.rs  e2e_calendar.rs  e2e_multiprovider.rs  security_18_interface.rs
rust/crates/vcp-sdk/: Cargo.toml
rust/crates/vcp-sdk/src/: attestation.rs  bridge.rs  command.rs  identity.rs  jcs.rs  lib.rs  manifest.rs  plan.rs  signer.rs
rust/crates/vcp-sdk/tests/: conformance.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
typescript/examples/: hello.ts
