[workspace]
resolver = "2"
members = [
    "crates/vcp-sdk",
    "crates/vcp-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hassard0/vcp-servers"
homepage = "https://github.com/hassard0/vcp-servers"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
