[package]
name = "vcp-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/hassard0/vcp-servers"
readme = "../../README.md"
keywords = ["vcp", "mcp", "capability", "authorization", "security"]
categories = ["authentication", "cryptography"]
description = "VCP enforcing Gateway: manifest verification, policy decisions, proof-bound grants, taint engine, attestation, audit, and invocation."

[dependencies]
vcp-sdk = { path = "../vcp-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
time = { workspace = true }
